--- a/helm/harvester/charts/harvester/panda_harvester_configmap.json
+++ b/helm/harvester/charts/harvester/panda_harvester_configmap.json
@@ -70,9 +70,9 @@
   },
   "cacher": {
     "data": [
-      "ddmendpoints_objectstores.json||https://datalake-cric.cern.ch/api/atlas/ddmendpoint/query/?json&state=ACTIVE&site_state=ACTIVE&preset=dict&json_pretty=1&type[]=OS_LOGS&type[]=OS_ES",
-      "panda_queues.json||https://datalake-cric.cern.ch/api/atlas/pandaqueue/query/?json",
-      "agis_ddmendpoints.json||https://datalake-cric.cern.ch/api/atlas/ddmendpoint/query/list/?json&state=ACTIVE&site_state=ACTIVE&preset=dict&json_pretty=1"
+      "ddmendpoints_objectstores.json||$HARVESTER_CRIC_OS",
+      "panda_queues.json||$HARVESTER_CRIC_SCHEDCONFIG",
+      "agis_ddmendpoints.json||$HARVESTER_CRIC_DDMENDPOINTS"
     ]
   }
 }
