--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -58,7 +58,11 @@ stringData:
   RUCIO_PASSWORD: "{{ .Values.rucio.password }}"
 
   # CRIC
-  CRIC_API_URL: "{{ .Values.cric.apiUrl }}"
+  {{- if .Values.cric.real }}
+  CRIC_API_URL: "{{ .Values.cric.schedConfig }}"
+  {{- else }}
+  CRIC_API_URL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/cric/panda_queues.json"
+  {{- end }}
 
   # AWS
   {{- if hasKey .Values "aws" }}
