--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -18,7 +18,7 @@ stringData:
 
   {{- if .Values.panda.hostName }}
   PANDA_SANDBOX_HOST: "{{ .Values.panda.hostName }}"
-  {{- end}}
+  {{- end }}
 
   # ActiveMQ
   PANDA_ACTIVEMQ_LIST: "{{ include "msgsvc_ref" . }}-activemq:61613"
@@ -37,6 +37,23 @@ stringData:
   PANDA_RUCIO_USERNAME: "{{ .Values.rucio.username }}"
   PANDA_RUCIO_PASSWORD: "{{ .Values.rucio.password }}"
   PANDA_RUCIO_ACCOUNT: "{{ .Values.rucio.account }}"
+
+  # CRIC
+  {{- if .Values.cric.real }}
+  PANDA_CRIC_CM: "{{ .Values.cric.costMetrix }}"
+  PANDA_CRIC_DDMBLACKLIST: "{{ .Values.cric.ddmBlackList }}"
+  PANDA_CRIC_DDMENDPOINTS: "{{ .Values.cric.ddmEndpoints }}"
+  PANDA_CRIC_URL_DDMENDPOINTS: "{{ .Values.cric.ddmEndpoints }}"
+  PANDA_CRIC_SCHEDCONFIG: "{{ .Values.cric.schedConfig }}"
+  PANDA_CRIC_SITES: "{{ .Values.cric.sites }}"
+  {{- else }}
+  PANDA_CRIC_CM: "/var/cric/cm.json"
+  PANDA_CRIC_DDMBLACKLIST: "/var/cric/ddm_blacklist.json"
+  PANDA_CRIC_DDMENDPOINTS: "/var/cric/ddm_endpoints.json"
+  PANDA_CRIC_URL_DDMENDPOINTS: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/cric/ddm_endpoints.json"
+  PANDA_CRIC_SCHEDCONFIG: "/var/cric/panda_queues.json"
+  PANDA_CRIC_SITES: "/var/cric/sites.json"
+  {{- end }}
 
   # proxy
   {{ include "set_proxy" . | indent 2 }}
