--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -155,7 +155,16 @@ rucio:
 
 
 cric:
-  apiUrl: "https://datalake-cric.cern.ch/api/atlas/pandaqueue/query/?json"
+  # real CRIC
+  real: true
+
+  # URLs
+  costMetrix: ""
+  ddmBlackList: "https://datalake-cric.cern.ch/api/atlas/ddmendpointstatus/query/?json&activity=write_wan&fstate=OFF"
+  ddmEndpoints: "https://datalake-cric.cern.ch/api/atlas/ddmendpoint/query/?json"
+  schedConfig: "https://datalake-cric.cern.ch/api/atlas/pandaqueue/query/?json"
+  sites: "https://datalake-cric.cern.ch/api/atlas/site/query/?json"
+  objectStores: "https://datalake-cric.cern.ch/api/atlas/ddmendpoint/query/?json&state=ACTIVE&site_state=ACTIVE&preset=dict&json_pretty=1&type[]=OS_LOGS&type[]=OS_EShttps://datalake-cric.cern.ch/api/atlas/ddmendpoint/query/?json&state=ACTIVE&site_state=ACTIVE&preset=dict&json_pretty=1&type[]=OS_LOGS&type[]=OS_ES"
 
 
 proxy:
