--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -164,7 +164,7 @@ cric:
   ddmEndpoints: "https://datalake-cric.cern.ch/api/atlas/ddmendpoint/query/?json"
   schedConfig: "https://datalake-cric.cern.ch/api/atlas/pandaqueue/query/?json"
   sites: "https://datalake-cric.cern.ch/api/atlas/site/query/?json"
-  objectStores: "https://datalake-cric.cern.ch/api/atlas/ddmendpoint/query/?json&state=ACTIVE&site_state=ACTIVE&preset=dict&json_pretty=1&type[]=OS_LOGS&type[]=OS_EShttps://datalake-cric.cern.ch/api/atlas/ddmendpoint/query/?json&state=ACTIVE&site_state=ACTIVE&preset=dict&json_pretty=1&type[]=OS_LOGS&type[]=OS_ES"
+  objectStores: "https://datalake-cric.cern.ch/api/atlas/ddmendpoint/query/?json&state=ACTIVE&site_state=ACTIVE&preset=dict&json_pretty=1&type[]=OS_LOGS&type[]=OS_ES"
 
 
 proxy:
