cric jsons via secret

--- a/secrets/templates/cric.yaml
+++ b/secrets/templates/cric.yaml
@@ -5,7 +5,7 @@ kind: Secret
 metadata:
   name: {{ include "secrets.fullname" . }}-cric-jsons
 type: Opaque
-binaryData:
+data:
   {{- range $path, $_ := .Files.Glob "files/cric_jsons/*.json" }}
   {{ base $path }}: |-
     {{ $.Files.Get $path | b64enc }}
