--- a/helm/idds/charts/rest/idds_configmap.json
+++ b/helm/idds/charts/rest/idds_configmap.json
@@ -17,7 +17,12 @@
              "plugin.receiver.destination": "${IDDS_RECEIVER_DESTINATION}",
              "plugin.receiver.username": "${IDDS_RECEIVER_USERNAME}",
              "plugin.receiver.password": "${IDDS_RECEIVER_PASSWORD}",
-             "plugin.receiver.broker_timeout": 600
+             "plugin.receiver.broker_timeout": 600,
+	     "plugin.receiver.channels": {"default": {"brokers": "${IDDS_RECEIVER_BROKERS}",
+                                                      "destination": "${IDDS_RECEIVER_DESTINATION}",
+                                                      "username": "${IDDS_RECEIVER_USERNAME}",
+                                                      "password": "${IDDS_RECEIVER_PASSWORD}",
+                                                      "broker_timeout": 600}}
 	    },
          "conductor":
             {"threshold_to_release_messages": 1000,
@@ -28,7 +33,18 @@
              "plugin.notifier.destination": "${IDDS_CONDUCTOR_DESTINATION}",
              "plugin.notifier.username": "${IDDS_CONDUCTOR_USERNAME}",
              "plugin.notifier.password": "${IDDS_CONDUCTOR_PASSWORD}",
-             "plugin.notifier.broker_timeout": 600
+             "plugin.notifier.broker_timeout": 600,
+	     "plugin.notifier.channels": {"default": {"brokers": "${IDDS_CONDUCTOR_BROKERS}",
+                                                       "destination": "${IDDS_CONDUCTOR_DESTINATION}",
+                                                       "username": "${IDDS_CONDUCTOR_USERNAME}",
+                                                       "password": "${IDDS_CONDUCTOR_PASSWORD}",
+                                                       "broker_timeout": 600},
+                                          "ContentExt": {"brokers": "${IDDS_CONDUCTOR_BROKERS}",
+                                                         "destination": "${IDDS_CONDUCTOR_DESTINATION}",
+                                                         "username": "${IDDS_CONDUCTOR_USERNAME}",
+                                                         "password": "${IDDS_CONDUCTOR_PASSWORD}",
+                                                         "broker_timeout": 600}
+                                          }
             }
         },
     "/opt/idds/config/panda.cfg":
