add alembic cfg in idds configmap

--- a/helm/idds/charts/rest/idds_configmap.json
+++ b/helm/idds/charts/rest/idds_configmap.json
@@ -72,6 +72,12 @@
              "request_retries": 3
         }
         },
+    "/opt/idds/config/idds/alembic.ini":
+        {"alembic":
+            {"sqlalchemy.url": "postgresql://${IDDS_DATABASE_USER}:${IDDS_DATABASE_PASSWORD}@${IDDS_DATABASE_HOST}/${IDDS_DATABASE_NAME}",
+             "version_table_schema": "${IDDS_DATABASE_SCHEMA}"
+            }
+        },
     "rest/config/idds.cfg":
         {"testsection":
             {"testkey": "testvalue"}
