--- a/secrets/templates/harvester.yaml
+++ b/secrets/templates/harvester.yaml
@@ -31,10 +31,10 @@ stringData:
   HARVESTER_CRIC_URL_DDMENDPOINTS: "{{ .Values.cric.ddmEndpoints }}"
   HARVESTER_CRIC_SCHEDCONFIG: "{{ .Values.cric.schedConfig }}"
   {{- else }}
-  HARVESTER_CRIC_OS: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/cric/ddm_objectstores.json"
-  HARVESTER_CRIC_DDMENDPOINTS: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/cric/ddm_endpoints.json"
+  HARVESTER_CRIC_OS: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.sslPort }}/cric/ddm_objectstores.json"
+  HARVESTER_CRIC_DDMENDPOINTS: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.sslPort }}/cric/ddm_endpoints.json"
   HARVESTER_CRIC_URL_DDMENDPOINTS: "https://{{ .Values.panda.hostName }}/cric/ddm_endpoints.json"
-  HARVESTER_CRIC_SCHEDCONFIG: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/cric/panda_queues.json"
+  HARVESTER_CRIC_SCHEDCONFIG: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.ssLPort }}/cric/panda_queues.json"
   {{- end }}
 
   {{ include "set_proxy" . | indent 2 }}
