--- a/helm/iam/charts/main/templates/deployment.yaml
+++ b/helm/iam/charts/main/templates/deployment.yaml
@@ -74,7 +74,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 8080
+              containerPort: {{ .Values.container.port }}
               protocol: TCP
           envFrom:
             - secretRef:
