--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -134,6 +134,7 @@ iam:
   profiles: "prod,registration,oidc"
 
   base_url: "FIXME"
+  port: 8443
 
   database:
     # affix will be used to fill host if it's empty.
