--- a/helm/panda/charts/jedi/panda_jedi_config.json
+++ b/helm/panda/charts/jedi/panda_jedi_config.json
@@ -2,6 +2,7 @@
     "db": {
         "backend": "postgres",
         "dbhost": "$PANDA_DB_HOST",
+        "dbport": "$PANDA_DB_PORT",
         "dbpasswd": "$PANDA_DB_PASSWORD"
     },
     "ddm": {
