--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -36,7 +36,7 @@ stringData:
   # PandaDB
   PANDA_DB_NAME: "{{ .Values.panda.database.name }}"
   PANDA_DB_HOST: "{{ .Values.panda.database.dbhost | default (printf "%s-postgres" (include "panda_ref" .)) }}"
-  PANDA_DB_PORT: "{{ .Values.panda.database.port | default "5432" }}"
+  PANDA_DB_PORT: "{{ .Values.panda.database.port }}"
   PANDA_DB_USER: "{{ .Values.panda.database.user }}"
   PANDA_DB_PASSWORD: {{ .Values.panda.database.password }}
   
