--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -52,8 +52,9 @@ panda:
 
   database:
     password: "FIXME"
-    # set only when  using an external database
+    # set hostname only when using an external database
     dbhost: ""
+    dbport: "5432"
     name: "panda_db"
     user: "panda"
 
