--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -43,7 +43,7 @@ stringData:
   # iDDS
   IDDS_DB_NAME: "{{ .Values.idds.database.name}}"
   IDDS_DB_HOST: "{{ .Values.idds.database.host | default (printf "%s-postgres" (include "idds_ref" .)) }}"
-  IDDS_DB_PORT: "{{ .Values.idds.database.port | default "5432" }}"
+  IDDS_DB_PORT: "{{ .Values.idds.database.port }}"
   IDDS_DB_USER: "{{ .Values.idds.database.user}}"
   IDDS_DB_PASSWORD: "{{ .Values.idds.database.password}}"
   IDDS_DB_SCHEMA: "{{ .Values.idds.database.schema}}"
