--- a/helm/idds/charts/rest/templates/statefulset.yaml
+++ b/helm/idds/charts/rest/templates/statefulset.yaml
@@ -77,7 +77,7 @@ spec:
           {{ if .Values.autoStart -}}
           command: ["/bin/sh", "-c"]
           args:
-            - until /usr/pgsql-*/bin/pg_isready -h ${IDDS_DATABASE_HOST} -p ${IDDS_DB_PORT}; do echo waiting for database; sleep 2; done;
+            - until /usr/pgsql-*/bin/pg_isready -h ${IDDS_DATABASE_HOST} -p ${IDDS_DATABASE_PORT}; do echo waiting for database; sleep 2; done;
               {{- if .Values.noRoot }}
               /opt/idds/bin/start-daemon.sh rest
               {{- else }}
