--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -95,8 +95,9 @@ idds:
     user: "idds"
     password: "FIXME"
     schema: "doma_idds"
-    # set only when using an external database
+    # set hostname only when using an external database
     host: ""
+    port: "5432"
 
 
 bigmon:
