--- a/secrets/templates/idds.yaml
+++ b/secrets/templates/idds.yaml
@@ -41,7 +41,7 @@ stringData:
   IDDS_DATABASE_SCHEMA: "{{ .Values.idds.database.schema}}"
 
   IDDS_DATABASE_HOST: "{{ .Values.idds.database.host | default (printf "%s-postgres" (include "idds_ref" .)) }}"
-  IDDS_DATABASE_PORT: "{{ .Values.idds.database.port }}"
+  IDDS_DATABASE_PORT: "{{ .Values.idds.database.port | default 5432}}"
 
   IDDS_CONDUCTOR_BROKERS: "{{ include "msgsvc_ref" . }}-activemq:61613"
   IDDS_CONDUCTOR_PORT: "61613"
