--- a/helm/harvester/charts/harvester/values.yaml
+++ b/helm/harvester/charts/harvester/values.yaml
@@ -15,6 +15,8 @@ autoStart: true
 # experiment to use to init and setup crons
 experiment: ""
 
+# to override deployment name
+deploymentName: ""
 
 # http proxy
 httpProxy: ""
