--- a/helm/harvester/charts/harvester/templates/route.yaml
+++ b/helm/harvester/charts/harvester/templates/route.yaml
@@ -11,7 +11,12 @@ spec:
   host: {{ .Values.route.hostName }}
   to:
     kind: Service
+    {{- if .Values.global.deploymentName }}
+    name: "{{ .Values.global.deploymentName }}-harvester"
+    path: "/{{ .Values.global.deploymentName }}-harvester"
+    {{- else }}
     name: {{ include "harvester.fullname" . }}
+    {{- end }}
   port:
     targetPort: http
 {{ end }}
