--- a/helm/harvester/charts/harvester/templates/route.yaml
+++ b/helm/harvester/charts/harvester/templates/route.yaml
@@ -9,11 +9,13 @@ metadata:
 
 spec:
   host: {{ .Values.route.hostName }}
+  {{- if .Values.global.deploymentName }}
+  path: "/{{ .Values.global.deploymentName }}-harvester"
+  {{- end }}
   to:
     kind: Service
     {{- if .Values.global.deploymentName }}
     name: "{{ .Values.global.deploymentName }}-harvester"
-    path: "/{{ .Values.global.deploymentName }}-harvester"
     {{- else }}
     name: {{ include "harvester.fullname" . }}
     {{- end }}
