--- a/helm/panda/sandbox/idds.cfg.template
+++ b/helm/panda/sandbox/idds.cfg.template
@@ -6,5 +6,5 @@ auth_type = oidc
 host = https://${PANDA_IDDS_HOST}:${PANDA_IDDS_PORT}/idds
 
 [oidc]
-oidc_token = /data/panda/idds_token.json
+oidc_token_file = /data/panda/idds_token.json
 vo = ${PANDA_IDDS_AUTH_VO}
