fixed dummy CRIC url

--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -51,7 +51,7 @@ stringData:
   PANDA_CRIC_CM: "/var/cric/cm.json"
   PANDA_CRIC_DDMBLACKLIST: "/var/cric/ddm_blacklist.json"
   PANDA_CRIC_DDMENDPOINTS: "/var/cric/ddm_endpoints.json"
-  PANDA_CRIC_URL_DDMENDPOINTS: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/cric/ddm_endpoints.json"
+  PANDA_CRIC_URL_DDMENDPOINTS: "http://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/cric/ddm_endpoints.json"
   PANDA_CRIC_SCHEDCONFIG: "/var/cric/panda_queues.json"
   PANDA_CRIC_SITES: "/var/cric/sites.json"
   {{- end }}
