--- a/rubin-panda-db-deploy/overlays/idds/prod/archive/cnpg-panda-idds-database.yaml
+++ b/rubin-panda-db-deploy/overlays/idds/prod/archive/cnpg-panda-idds-database.yaml
@@ -22,7 +22,7 @@ spec:
   bootstrap:
     initdb:
       database: idds
-      owner: idds
+      owner: rubin
       secret:
         name: usdf-panda-idds-creds
   
