--- a/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
+++ b/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
@@ -23,7 +23,7 @@ spec:
   bootstrap:
     initdb:
       database: panda
-      owner: panda
+      owner: rubin
       secret:
         name: usdf-panda-server-creds
   
