Use our own docker image to include the 2 postgres plugins

--- a/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
+++ b/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
@@ -27,7 +27,7 @@ spec:
       secret:
         name: usdf-panda-server-creds
   
-  imageName:  ghcr.io/cloudnative-pg/postgresql:14.4-7
+  imageName:  ghcr.io/pandawms/panda-k8s:0.0.1
   inheritedMetadata:
     annotations:
       prometheus.io/scrape: 'true' 
