--- a/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
+++ b/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
@@ -5,6 +5,7 @@ metadata:
   # note the name is the DB services/pods  not the Cluster name.
   name: usdf-panda-server
 spec:
+  startDelay: 300
   backup:
     retentionPolicy: "15d"
     barmanObjectStore:
