Changed docker image location and removed Dockerfile that is not needed anymore

--- a/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
+++ b/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
@@ -28,7 +28,7 @@ spec:
       secret:
         name: usdf-panda-server-creds
   
-  imageName:  ghcr.io/pandawms/panda-k8s:0.0.1
+  imageName: lsstsqre/cloudnative-pg:14
   inheritedMetadata:
     annotations:
       prometheus.io/scrape: 'true' 
