disable panda/idds database, to use external db

--- a/helm/idds/values/values-lsst.yaml
+++ b/helm/idds/values/values-lsst.yaml
@@ -32,6 +32,7 @@ rest:
             hostOverride: rubin-panda-idds-dev.slac.stanford.edu
 
 postgres:
+  enabled: false
 
   # PV: For use cases that users are not allowed to create PV,
   # please update class to corresponding storageclass and update create to false.
