--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -9,6 +9,8 @@ stringData:
   PANDA_DB_PASSWORD: {{ .Values.panda.database.password }}
   PANDA_DB_HOST: "{{ .Values.panda.database.dbhost | default (printf "%s-postgres" (include "panda_ref" .)) }}"
   PANDA_DB_PORT: "{{ .Values.panda.database.dbport }}"
+  PANDA_DB_USER: "{{ .Values.panda.database.user | default "panda" }}"
+  PANDA_DB_NAME: "{{ .Values.panda.database.name | default "panda_db" }}"
 
   PANDA_URL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/server/panda"
   PANDA_URL_SSL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.sslPort }}/server/panda"
