Changed the user from panda to rubin

--- a/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
+++ b/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
@@ -44,8 +44,8 @@ spec:
       pg_stat_statements.max: "10000"
       pg_stat_statements.track: all
     pg_hba:
-      - local all panda trust
-      - host all panda localhost trust
+      - local all rubin trust
+      - host all rubin localhost trust
       - local all postgres trust
       - host all postgres localhost trust
       - host all all 0.0.0.0/0 md5
