--- a/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
+++ b/rubin-panda-db-deploy/overlays/panda/prod/cnpg-panda-server-database.yaml
@@ -27,7 +27,12 @@ spec:
       owner: rubin
       secret:
         name: usdf-panda-server-creds
-  
+      postInitTemplateSQL:
+        - CREATE EXTENSION IF NOT EXISTS pg_cron;
+        - GRANT USAGE ON SCHEMA cron TO rubin;
+        - CREATE SCHEMA IF NOT EXISTS partman;
+        - CREATE EXTENSION IF NOT EXISTS pg_partman SCHEMA partman;
+
   imageName: lsstsqre/cloudnative-pg:14
   inheritedMetadata:
     annotations:
