--- a/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
@@ -27,7 +27,7 @@
       "executableFile": "/opt/harvester/sandbox/lsst.runpilot2-wrapper.sh",
       "x509UserProxy": "/data/harvester/run/x509up_u25606",
       "logDir": "/var/log/condor_logs/${hostname}",
-      "logBaseURL": "https://panda-dev-server/condor_logs/${hostname}",
+      "logBaseURL": "https://rubin-panda-bigmon-dev.slac.stanford.edu:8443/condor_logs/${hostname}",
       "condorPool": "${hostname}",
       "nProcesses": 8
     },
@@ -92,7 +92,7 @@
       "executableFile": "/opt/harvester/sandbox/lsst.runpilot2-wrapper.sh",
       "x509UserProxy": "/data/harvester/run/x509up_u25606",
       "logDir": "/var/log/condor_logs/$hostname",
-      "logBaseURL": "https://panda-dev-server/condor_logs/$hostname",
+      "logBaseURL": "https://rubin-panda-bigmon-dev.slac.stanford.edu:8443/condor_logs/$hostname",
       "condorPool": "${hostname}",
       "nProcesses": 8
     },
@@ -175,7 +175,7 @@
           "x509UserProxy": "/data/harvester/run/x509up_u25606",    
           "proxySecretPath": "/data/harvester/run/x509up_u25606",
           "logDir": "/var/log/condor_logs/$hostname",
-          "logBaseURL": "https://panda-dev-server/condor_logs/$hostname",
+          "logBaseURL": "https://rubin-panda-bigmon-dev.slac.stanford.edu:8443/condor_logs/$hostname",
           "cpuAdjustRatio": 90,
           "memoryAdjustRatio": 100,
           "nProcesses": 4
@@ -227,7 +227,7 @@
           "x509UserProxy": "/data/harvester/run/x509up_u25606",
           "proxySecretPath": "/data/harvester/run/x509up_u25606",
           "logDir": "/var/log/condor_logs/$hostname",
-          "logBaseURL": "https://panda-dev-server/condor_logs/$hostname",
+          "logBaseURL": "https://rubin-panda-bigmon-dev.slac.stanford.edu:8443/condor_logs/$hostname",
           "cpuAdjustRatio": 90,
           "memoryAdjustRatio": 100,
           "nProcesses": 4
