--- a/helm/idds/charts/rest/idds_configmap.json
+++ b/helm/idds/charts/rest/idds_configmap.json
@@ -39,7 +39,8 @@
                                                        "username": "${IDDS_CONDUCTOR_USERNAME}",
                                                        "password": "${IDDS_CONDUCTOR_PASSWORD}",
                                                        "broker_timeout": 600},
-                                          "ContentExt": {"brokers": "${IDDS_CONDUCTOR_BROKERS}",
+				          "ContentExt": {},
+                                          "ContentExt1": {"brokers": "${IDDS_CONDUCTOR_BROKERS}",
                                                          "destination": "${IDDS_CONDUCTOR_DESTINATION}",
                                                          "username": "${IDDS_CONDUCTOR_USERNAME}",
                                                          "password": "${IDDS_CONDUCTOR_PASSWORD}",
