--- a/secrets/templates/harvester.yaml
+++ b/secrets/templates/harvester.yaml
@@ -18,6 +18,8 @@ stringData:
   PANDA_URL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/server/panda"
   PANDA_URL_SSL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.sslPort }}/server/panda"
 
+  BIGMON_BASE_URL: ".Values.bigmon.base_url"
+
   {{- if .Values.harvester.experiment }}
   EXPERIMENT: {{ .Values.harvester.experiment }}
   {{- end}}
