fixed dummy CRIC url

--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -61,7 +61,7 @@ stringData:
   {{- if .Values.cric.real }}
   CRIC_API_URL: "{{ .Values.cric.schedConfig }}"
   {{- else }}
-  CRIC_API_URL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/cric/panda_queues.json"
+  CRIC_API_URL: "http://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/cric/panda_queues.json"
   {{- end }}
 
   # AWS
